@@ -12,6 +12,8 @@ using namespace CLHEP;
 map<string, double> ECAL_HitProcess :: integrateDgt(MHit* aHit, int hitn)
 {
 	map<string, double> dgtz;
+	if(aHit->isBackgroundHit == 1) return dgtz;
+
 	vector<identifier> identity = aHit->GetId();
 	trueInfos tInfos(aHit);
 
