@@ -8,6 +8,8 @@ using namespace CLHEP;
 map<string, double> muon_hodo_HitProcess :: integrateDgt(MHit* aHit, int hitn)
 {
 	map<string, double> dgtz;
+	if(aHit->isBackgroundHit == 1) return dgtz;
+
 	vector<identifier> identity = aHit->GetId();
 
 	int idx = identity[0].id;
