@@ -12,6 +12,8 @@ using namespace CLHEP;
 map<string, double> cormo_HitProcess :: integrateDgt(MHit* aHit, int hitn)
 { 
 	map<string, double> dgtz;
+	if(aHit->isBackgroundHit == 1) return dgtz;
+
 	vector<identifier> identity = aHit->GetId();
 
 	int sector = identity[0].id;
