@@ -13,6 +13,7 @@ using namespace CLHEP;
 map<string, double> veto_HitProcess :: integrateDgt(MHit* aHit, int hitn)
 {
 	map<string, double> dgtz;
+	if(aHit->isBackgroundHit == 1) return dgtz;
 	vector<identifier> identity = aHit->GetId();
 
 	int sector  = identity[0].id;
