@@ -159,6 +159,8 @@ void ec_HitProcess::initWithRunNumber(int runno)
 map<string, double> ec_HitProcess :: integrateDgt(MHit* aHit, int hitn)
 {
 	map<string, double> dgtz;
+	if(aHit->isBackgroundHit == 1) return dgtz;
+
 	vector<identifier> identity = aHit->GetId();
 
 	// get sector, stack (inner or outer), view (U, V, W), and strip.
