@@ -33,6 +33,8 @@ void ecs_HitProcess::initWithRunNumber(int runno)
 map<string, double> ecs_HitProcess :: integrateDgt(MHit* aHit, int hitn)
 {
 	map<string, double> dgtz;
+	if(aHit->isBackgroundHit == 1) return dgtz;
+
 	vector<identifier> identity = aHit->GetId();
 	
 	// get sector, stack (inner or outer), view (U, V, W), and strip.
