@@ -148,6 +148,8 @@ static ftCalConstants initializeFTCALConstants(int runno)
 map<string, double> ft_cal_HitProcess :: integrateDgt(MHit* aHit, int hitn)
 {
 	map<string, double> dgtz;
+	if(aHit->isBackgroundHit == 1) return dgtz;
+
 	vector<identifier> identity = aHit->GetId();
 	trueInfos tInfos(aHit);
 
