@@ -140,6 +140,8 @@ static ftHodoConstants initializeFTHODOConstants(int runno)
 map<string, double> ft_hodo_HitProcess :: integrateDgt(MHit* aHit, int hitn)
 {
 	map<string, double> dgtz;
+	if(aHit->isBackgroundHit == 1) return dgtz;
+
 	vector<identifier> identity = aHit->GetId();
 	trueInfos tInfos(aHit);
 	
