@@ -60,7 +60,9 @@ static ltccConstants initializeLTCCConstants(int runno)
 map<string, double> ltcc_HitProcess :: integrateDgt(MHit* aHit, int hitn)
 {
 	map<string, double> dgtz;
-	
+	if(aHit->isBackgroundHit == 1) return dgtz;
+
+
 	// we want to crash if identity doesn't have size 3
 	vector<identifier> identity = aHit->GetId();
 	int idsector  = identity[0].id;
