@@ -40,6 +40,8 @@ static richConstants initializeRICHConstants(int runno)
 map<string, double> rich_HitProcess :: integrateDgt(MHit* aHit, int hitn)
 {
   map<string, double> dgtz;
+	if(aHit->isBackgroundHit == 1) return dgtz;
+
   vector<identifier> identity = aHit->GetId();
 	
   int sector = identity[0].id;
