@@ -8,6 +8,8 @@ using namespace CLHEP;
 map<string, double> bubble_HitProcess :: integrateDgt(MHit* aHit, int hitn)
 {
 	map<string, double> dgtz;
+	if(aHit->isBackgroundHit == 1) return dgtz;
+
 	vector<identifier> identity = aHit->GetId();
 	int thisPid = aHit->GetPID();
 	double totEnergy = aHit->GetE();
